# tum_ar

./: .gitignore  CMakeLists.txt  LICENSE  package.xml  readme.md
action/: ARInspection.action
images/: background.xcf
images/type_a/: pois.xcf
include/ar_window/: mainwindow.h
src/: main.cpp  mainwindow.cpp
tum_ar/: CMakeLists.txt  package.xml
tum_ar_msgs/: CMakeLists.txt  package.xml
tum_ar_msgs/action/: ARTask.action
tum_ar_msgs/msg/: ARSlide.msg  Outcome.msg  POI.msg
tum_ar_msgs/srv/: LoadTaskFromFile.srv
tum_ar_window/: CMakeLists.txt  ar_window.pro  package.xml
tum_ar_window/action/: ARInspection.action
tum_ar_window/config/: example.yaml  projector_bos.yaml  projector_tum.yaml
tum_ar_window/images/: background.xcf
tum_ar_window/include/tum_ar_window/: ARInspectionNode.h  ARServerNode.h  ARSlideRenderer.h  ARTaskNode.h  ARWindow.h  ARWindowNode.h  ConfigReader.h  Projector.h  Toolbox.h  mainwindow.h
tum_ar_window/launch/: ar.launch  ar_server.launch  ar_window.launch
tum_ar_window/msg/: ARSlide.msg  Box.msg  InspectionResult.msg
tum_ar_window/slides/: example.yaml
tum_ar_window/src/: ARInspectionNode.cpp  ARServerNode.cpp  ARSlideRenderer.cpp  ARTaskNode.cpp  ARWindow.cpp  ARWindowNode.cpp  ConfigReader.cpp  Projector.cpp  main.cpp  mainwindow.cpp  serverMain.cpp  windowMain.cpp
tum_ar_window/ui/: ARWindow.ui  mainwindow.ui
tum_table_localization/: CMakeLists.txt  package.xml
tum_table_localization/include/tum_table_localization/: table_localization.h
tum_table_localization/launch/: table_localization.launch  test_table_localization.launch
tum_table_localization/src/: main.cpp  table_localization.cpp
tum_touchscreen_ui/: CMakeLists.txt  package.xml
tum_touchscreen_ui/include/tum_touchscreen_ui/: TouchscreenWindow.h  TouchscreenWindowNode.h
tum_touchscreen_ui/launch/: test_touchscreen_window.launch  touchscreen_window.launch
tum_touchscreen_ui/src/: TouchscreenWindow.cpp  TouchscreenWindowNode.cpp  main.cpp
tum_touchscreen_ui/ui/: TouchscreenWindow.ui
