<?xml version="1.0"?>
<package>
	<name>tum_ar_window</name>
	<version>0.1.0</version>
	<description>The tum_ar_window package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="arne.peters@tum.de">Arne Peters</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<license>BSD 3-Clause License</license>


	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<url type="repository">https://github.com/TUM-I6/tum_ar</url>


	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->


	<!-- The *_depend tags are used to specify dependencies -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Examples: -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!--	 <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!--	 <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!--	 <run_depend>message_runtime</run_depend> -->
	<!-- Use test_depend for packages you need only for testing: -->
	<!--	 <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tum_ar_msgs</build_depend>
	<build_depend>visualization_msgs</build_depend>

	<run_depend>actionlib</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>tum_ar_msgs</run_depend>
	<run_depend>visualization_msgs</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
